# streamer

./: .gitignore  README.md
demux/: Makefile.am  gsththstreamsrc.c  gsththstreamsrc.h  gstmediademux.c  gstmediademux.h
mux/: Makefile.am  gsththstreamsink.c  gsththstreamsink.h
serial/: ADT_SerialPort.c  ADT_SerialPort.h  Makefile.am  gstserialtextsrc.c  gstserialtextsrc.h  textgen.py
